Fixed and removed ToDos and workarounds